Verifying the BERT example

--- a/examples/4_bert_llm/test.ipynb
+++ b/examples/4_bert_llm/test.ipynb
@@ -1,28 +1,52 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "ed70a480-3686-4522-acee-ae48079579d2",
+   "metadata": {},
+   "source": [
+    "<h1 align=\"center\">\n",
+    "  <a href=\"https://uptrain.ai\">\n",
+    "    <img width=\"300\" src=\"https://user-images.githubusercontent.com/108270398/214240695-4f958b76-c993-4ddd-8de6-8668f4d0da84.png\" alt=\"uptrain\">\n",
+    "  </a>\n",
+    "</h1>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c074abda-7ad0-4af1-a7b4-f5177213dae8",
+   "metadata": {},
+   "source": [
+    "<h1 style=\"text-align: center;\">Fine-tuning a Large-Language Model</h1>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c2f34304-dc81-4fd9-94dc-a7dfc371673a",
+   "metadata": {},
+   "source": [
+    "### Install Required packages\n",
+    "- [PyTorch](https://pytorch.org/get-started/locally/): Deep learning framework.\n",
+    "- Hugging Face Transformers(https://huggingface.co/docs/transformers/installation): To use pretrained state-of-the-art models.\n",
+    "- [Hugging Face Datasets](https://pypi.org/project/datasets/): Use public Hugging Face datasets\n",
+    "- [IPywidgets](https://ipywidgets.readthedocs.io/en/stable/user_install.html): For interactive notebook widgets"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a671f8cf-2293-4405-b07c-a5182863f6d5",
-   "metadata": {},
+   "id": "52468837-a2f1-4531-bef5-b95276db6b82",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "# !conda install -c huggingface transformers"
+    "!pip install torch transformers[torch] datasets ipywidgets"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "66cac4cb-b1a1-4b31-b2fa-0a1400cfc19d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#https://huggingface.co/docs/transformers/installation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
    "id": "f61005f8-27ae-4a7a-a190-fe5f335821cb",
    "metadata": {
     "tags": []
@@ -39,9 +63,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "8d6e1263-e704-4de2-af99-507ea68125fd",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "tokenizer = AutoTokenizer.from_pretrained(model_checkpoint)\n",
@@ -52,9 +78,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "d9edc5da-8366-4c55-93a7-4601c89c9970",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -81,7 +109,12 @@
     "        \"signal_formulae\": nike_text_present\n",
     "    }],\n",
     "\n",
+    "    # Define where to save the retraining dataset\n",
     "    'retraining_folder': uptrain_save_fold_name,\n",
+    "    \n",
+    "    # Define when to retrain, define a large number because we\n",
+    "    # are not retraining yet\n",
+    "    'retrain_after': 10000000000\n",
     "}\n",
     "\n",
     "framework = uptrain.Framework(cfg)"
@@ -89,9 +122,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "abe66970-c0ce-421d-9f7a-845453615903",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -134,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "ca8d91d9-4540-4850-ad27-69fe9468e7dc",
    "metadata": {},
    "outputs": [
@@ -142,7 +177,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Using custom data configuration default-7b38c5d8a445c9cb\n"
+      "Using custom data configuration default-2370e3cf0f5387dd\n"
      ]
     },
     {
@@ -153,13 +188,13 @@
       "To disable this warning, you can either:\n",
       "\t- Avoid using `tokenizers` before the fork if possible\n",
       "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n",
-      "Downloading and preparing dataset json/default to /Users/sourabhagrawal/.cache/huggingface/datasets/json/default-7b38c5d8a445c9cb/0.0.0/0f7e3662623656454fcd2b650f34e886a7db4b9104504885bd462096cc7a9f51...\n"
+      "Downloading and preparing dataset json/default to /Users/vipul/.cache/huggingface/datasets/json/default-2370e3cf0f5387dd/0.0.0/0f7e3662623656454fcd2b650f34e886a7db4b9104504885bd462096cc7a9f51...\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bb1114ee3f344b8d8e4e04f134f02c2e",
+       "model_id": "f3febc7766304c9b84a1f06ae414fd70",
        "version_major": 2,
        "version_minor": 0
       },
@@ -173,7 +208,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b36311552c2143cdbe3a580edf5684c6",
+       "model_id": "c66dff810d5647bfa1848aafa2ae36c5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -187,7 +222,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
+       "model_id": "c46565a9a9244205b9a01af3de48b50b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -202,13 +237,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dataset json downloaded and prepared to /Users/sourabhagrawal/.cache/huggingface/datasets/json/default-7b38c5d8a445c9cb/0.0.0/0f7e3662623656454fcd2b650f34e886a7db4b9104504885bd462096cc7a9f51. Subsequent calls will reuse this data.\n"
+      "Dataset json downloaded and prepared to /Users/vipul/.cache/huggingface/datasets/json/default-2370e3cf0f5387dd/0.0.0/0f7e3662623656454fcd2b650f34e886a7db4b9104504885bd462096cc7a9f51. Subsequent calls will reuse this data.\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3c09d3a0c08a48d795beea61155c2da0",
+       "model_id": "ea9d507379f947adb8b5553b0e29592c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -222,7 +257,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "df783dbf6e51409c9cc4878306f71e07",
+       "model_id": "d33d8af89d6b48fba1382d275d7b6975",
        "version_major": 2,
        "version_minor": 0
       },
@@ -236,7 +271,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "55ea73c68886447a9f986a136dae4fb6",
+       "model_id": "d05defffbcbc4cd0b17d3f0212e7836d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -265,7 +300,7 @@
        "    <div>\n",
        "      \n",
        "      <progress value='2' max='1' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [1/1 00:17]\n",
+       "      [1/1 02:11]\n",
        "    </div>\n",
        "    "
       ],
@@ -281,10 +316,10 @@
      "output_type": "stream",
      "text": [
       "The following columns in the training set don't have a corresponding argument in `DistilBertForMaskedLM.forward` and have been ignored: word_ids. If word_ids are not expected by `DistilBertForMaskedLM.forward`,  you can safely ignore this message.\n",
-      "/Users/sourabhagrawal/miniconda3/envs/bert/lib/python3.10/site-packages/transformers/optimization.py:306: FutureWarning: This implementation of AdamW is deprecated and will be removed in a future version. Use the PyTorch implementation torch.optim.AdamW instead, or set `no_deprecation_warning=True` to disable this warning\n",
+      "/Users/vipul/opt/anaconda3/envs/uptrain_test/lib/python3.8/site-packages/transformers/optimization.py:306: FutureWarning: This implementation of AdamW is deprecated and will be removed in a future version. Use the PyTorch implementation torch.optim.AdamW instead, or set `no_deprecation_warning=True` to disable this warning\n",
       "  warnings.warn(\n",
       "***** Running training *****\n",
-      "  Num examples = 93\n",
+      "  Num examples = 92\n",
       "  Num Epochs = 3\n",
       "  Instantaneous batch size per device = 64\n",
       "  Total train batch size (w. parallel, distributed & accumulation) = 64\n",
@@ -297,7 +332,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ">>>Before training, Perplexity: 7.20\n"
+      ">>>Before training, Perplexity: 10.48\n"
      ]
     },
     {
@@ -307,7 +342,7 @@
        "    <div>\n",
        "      \n",
        "      <progress value='6' max='6' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [6/6 00:38, Epoch 3/3]\n",
+       "      [6/6 07:16, Epoch 3/3]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -320,18 +355,18 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>2.113000</td>\n",
-       "      <td>1.247291</td>\n",
+       "      <td>1.631900</td>\n",
+       "      <td>0.936632</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
-       "      <td>1.451700</td>\n",
-       "      <td>1.130067</td>\n",
+       "      <td>1.283500</td>\n",
+       "      <td>1.153624</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
-       "      <td>1.151200</td>\n",
-       "      <td>0.848002</td>\n",
+       "      <td>1.151900</td>\n",
+       "      <td>0.998965</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table><p>"
@@ -392,7 +427,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ">>>After trainign, Perplexity: 2.56\n"
+      ">>>After trainign, Perplexity: 2.63\n"
      ]
     }
    ],
@@ -403,9 +438,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "f014895c-0e6d-4886-a9b4-7071154e6315",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# print([original_model_outputs, retrained_model_outputs])\n",
@@ -437,7 +474,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.8.16"
   }
  },
  "nbformat": 4,
