Added Recommendation bias example

--- a/examples/2_cyber_attack_classification/uptrain_concept_drift.ipynb
+++ b/examples/2_cyber_attack_classification/uptrain_concept_drift.ipynb
@@ -115,7 +115,11 @@
     "            file_downloaded_ok = subprocess.call(\"wget \" + remote_url, shell=True, stdout=subprocess.DEVNULL, stderr=subprocess.STDOUT)\n",
     "            print(\"Data downloaded\")\n",
     "    except:\n",
+    "        print(e)\n",
     "        print(\"Could not load training data\")\n",
+    "        print(\"Please follow following steps to manually download data\")\n",
+    "        print(\"Step 1: Open in browser: https://oodles-dev-training-data.s3.amazonaws.com/NSL_KDD_binary.csv\")\n",
+    "        print(\"Step 2: Download and move the file to example location (i.e. uptrain/examples/2_cyber_attack_classification/\")\n",
     "else:\n",
     "    print(\"Data file exists. Skipping download.\")"
    ]
