Added Recommendation Hit Rate Measurable

--- a/examples/3_shopping_cart_recommendation/uptrain_recommendation_bias.ipynb
+++ b/examples/3_shopping_cart_recommendation/uptrain_recommendation_bias.ipynb
@@ -176,9 +176,9 @@
     "        if (not output) or (not gt):\n",
     "            continue\n",
     "        y_preds = output[0]\n",
-    "        y_gt = gt[0]\n",
+    "        y_gt = gt\n",
     "        try:\n",
-    "            vector_test = self.model.get_vector(y_gt['product_sku'])\n",
+    "            vector_test = self.model.get_vector(y_gt)\n",
     "        except:\n",
     "            vector_test = []\n",
     "        vector_pred = self.model.get_vector(y_preds)\n",
@@ -221,8 +221,8 @@
     "        if (not output) or (not gt):\n",
     "            continue\n",
     "        y_preds = output[0]\n",
-    "        y_gt = gt[0]\n",
-    "        prod_test = self.product_data[y_gt['product_sku']]\n",
+    "        y_gt = gt\n",
+    "        prod_test = self.product_data[y_gt]\n",
     "        prod_pred = self.product_data[y_preds]\n",
     "        if self.price_sel_fn(prod_test) and self.price_sel_fn(prod_pred):\n",
     "            test_item_price = self.price_sel_fn(prod_test)\n",
@@ -292,20 +292,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Deleting the folder:  uptrain_smart_data\n",
-      "Deleting the folder:  uptrain_logs\n"
+      "Deleting the folder:  uptrain_smart_data\n"
      ]
     }
    ],
    "source": [
     "cfg = {\n",
-    "    # Define your metrics to identify data drifts\n",
     "    \"checks\": [\n",
+    "        # Check to monitor the hit-rate of the model \n",
+    "        # (i.e., if any recommended item was selected)\n",
+    "        {\n",
+    "            'type': uptrain.Anomaly.CONCEPT_DRIFT,\n",
+    "            'algorithm': uptrain.DataDriftAlgo.DDM,\n",
+    "            'warn_thres': 2,\n",
+    "            'alarm_thres': 3,\n",
+    "            \"measurable_args\": {\n",
+    "                'type': uptrain.MeasurableType.REC_HIT_RATE,\n",
+    "                },\n",
+    "        },\n",
+    "        # Define a check on popularity bias\n",
     "        {\n",
     "            'type': uptrain.Anomaly.POPULARITY_BIAS,\n",
     "            'algorithm': uptrain.BiasAlgo.POPULARITY_BIAS,\n",
     "            'sessions': x_train_sku,   \n",
     "        },\n",
+    "        # Custom monitor\n",
     "        {\n",
     "            'type': uptrain.Anomaly.CUSTOM_MONITOR,\n",
     "            'initialize_func': cosine_dist_init,\n",
@@ -313,6 +324,7 @@
     "            'need_gt': True,\n",
     "            'dashboard_name': 'cosine_distance'\n",
     "        },\n",
+    "        # Custom monitor\n",
     "        {\n",
     "            'type': uptrain.Anomaly.CUSTOM_MONITOR,\n",
     "            'initialize_func': price_homogeneity_init,\n",
@@ -365,10 +377,38 @@
     "\n",
     "    # Log input and output to framework\n",
     "    ids = framework.log(inputs=inputs, outputs=preds)\n",
-    "    framework.log(identifiers=ids, gts=y_test[i*inference_batch_size:(i+1)*inference_batch_size])\n",
+    "    \n",
+    "    # Getting ground truth and logging to framework\n",
+    "    y_test_batch = y_test[i*inference_batch_size:(i+1)*inference_batch_size]\n",
+    "    gts = [y[0]['product_sku'] for y in y_test_batch]\n",
+    "    framework.log(identifiers=ids, gts=gts)\n",
     "    \n",
     "    # Adding 1 sec pause to visualize the results live on the dashboard\n",
     "    time.sleep(1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "889c265c-b58a-428b-921a-38ab8cf144b6",
+   "metadata": {},
+   "source": [
+    "### Monitoring the hit-rate of the model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "95e372ee-3028-401c-9c0f-e6c3eaae2fff",
+   "metadata": {},
+   "source": [
+    "By applying a concept drift check on the model in prediction, UpTrain automatically monitors the performance of the model. In this case, the performance is defined as the hit rate, that is, the proportion of items that was boought by the user was actually recommended by the model. We observe an average hit-rate of around 0.1. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f8cf472c-6a58-48e2-941a-769d55da6bc1",
+   "metadata": {},
+   "source": [
+    "<img width=\"600\" alt=\"hit_rate\" src=\"https://user-images.githubusercontent.com/5287871/217215003-e121b499-0e69-4e98-9cd6-2b931cc62056.png\">"
    ]
   },
   {
