Adding alerts for dashboard and multi-histogram feature

--- a/examples/2_cyber_attack_classification/uptrain_concept_drift.ipynb
+++ b/examples/2_cyber_attack_classification/uptrain_concept_drift.ipynb
@@ -268,10 +268,16 @@
     "                    'recent_acc': recent_acc,\n",
     "                }, i, self.dashboard_name)\n",
     "            \n",
-    "            # Print a message when recent model performance goes down \n",
+    "            # Send an alert when recent model performance goes down \n",
     "            if (self.initial_acc - recent_acc > self.thres) and (not self.is_drift_detected):\n",
-    "                    print(\"Concept drift detected with custom metric at time: \", i)\n",
-    "                    self.is_drift_detected = True"
+    "                alert = f\"Concept drift detected with custom metric at time: {i}\" \n",
+    "                print(alert)\n",
+    "                self.log_handler.add_alert(\n",
+    "                    \"Custom Concept Drift Alert\",\n",
+    "                    alert,\n",
+    "                    self.dashboard_name\n",
+    "                )\n",
+    "                self.is_drift_detected = True"
    ]
   },
   {
@@ -292,16 +298,16 @@
    "source": [
     "checks = [\n",
     "    {\n",
-    "    'type': uptrain.Anomaly.CONCEPT_DRIFT,\n",
-    "    'algorithm': uptrain.DataDriftAlgo.DDM,\n",
-    "    'warn_thres': 2,\n",
-    "    'alarm_thres': 3,\n",
+    "        'type': uptrain.Anomaly.CONCEPT_DRIFT,\n",
+    "        'algorithm': uptrain.DataDriftAlgo.DDM,\n",
+    "        'warn_thres': 2,\n",
+    "        'alarm_thres': 3,\n",
     "    },\n",
     "    {\n",
-    "    'type': uptrain.Anomaly.CUSTOM_MONITOR,\n",
-    "    'initialize_func': custom_initialize_func,\n",
-    "    'check_func': custom_check_func,\n",
-    "    'need_gt': True,\n",
+    "        'type': uptrain.Anomaly.CUSTOM_MONITOR,\n",
+    "        'initialize_func': custom_initialize_func,\n",
+    "        'check_func': custom_check_func,\n",
+    "        'need_gt': True,\n",
     "    },\n",
     "]"
    ]
@@ -325,7 +331,13 @@
      "output_type": "stream",
      "text": [
       "Deleting the folder:  uptrain_smart_data\n",
-      "Deleting the folder:  uptrain_logs\n"
+      "Deleting the folder:  uptrain_logs\n",
+      "\n",
+      "  You can now view your Streamlit app in your browser.\n",
+      "\n",
+      "  Local URL: http://localhost:8502\n",
+      "  Network URL: http://192.168.6.64:8502\n",
+      "\n"
      ]
     }
    ],
@@ -364,14 +376,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "  You can now view your Streamlit app in your browser.\n",
-      "\n",
-      "  Local URL: http://localhost:8501\n",
-      "  Network URL: http://192.168.6.64:8501\n",
-      "\n",
-      "Drift detected with DDM at time:  111298\n",
-      "Concept drift detected with custom metric at time:  111000\n"
+      "Drift detected with DDM at time: 111298\n",
+      "Concept drift detected with custom metric at time: 111000\n"
      ]
     }
    ],
@@ -387,9 +393,9 @@
     "    ids = framework.log(inputs=inputs, outputs=preds)\n",
     "    \n",
     "    # Attach ground truth to corresponding predictions \n",
-    "    # in UpTrain framewrok and identify concept drift\n",
+    "    # in UpTrain framework and identify concept drift\n",
     "    ground_truth = y_test[i*batch_size:(i+1)*batch_size] \n",
-    "    framework.log(identifiers=ids, gts = ground_truth)\n",
+    "    framework.log(identifiers=ids, gts=ground_truth)\n",
     "    \n",
     "    # Pausing between batches to monitor progress in the dashboard\n",
     "    time.sleep(2)"
