Adding tests for pytest

--- a/examples/3_shopping_cart_recommendation/uptrain_recommendation_bias.ipynb
+++ b/examples/3_shopping_cart_recommendation/uptrain_recommendation_bias.ipynb
@@ -51,7 +51,6 @@
     "from scipy.spatial.distance import cosine\n",
     "import numpy as np\n",
     "import subprocess\n",
-    "import zipfile\n",
     "import json\n",
     "import time\n",
     "\n",
@@ -93,11 +92,10 @@
     "    except:\n",
     "        dummy = 1\n",
     "    try:\n",
-    "        if not os.path.exists(\"data.zip\"):\n",
+    "        if not os.path.exists(\"sigir_data.json\"):\n",
     "            file_downloaded_ok = subprocess.call(\"wget \" + remote_url, shell=True, stdout=subprocess.DEVNULL, stderr=subprocess.STDOUT)\n",
     "            print(\"Data downloaded\")\n",
     "    except:\n",
-    "        print(e)\n",
     "        print(\"Could not load training data\")\n",
     "        print(\"Please follow following steps to manually download data\")\n",
     "        print(\"Step 1: Open in browser: https://oodles-dev-training-data.s3.amazonaws.com/sigir_data.json\")\n",
