--- a/examples/fraud_detection/run.ipynb
+++ b/examples/fraud_detection/run.ipynb
@@ -17,7 +17,7 @@
    "id": "013d8c0e-d99c-40dc-a06f-9f9f70aa81a0",
    "metadata": {},
    "source": [
-    "<h1 style=\"text-align: center;\">Performance Monitoring: Cyber-Attack Detection</h1>"
+    "<h1 style=\"text-align: center;\">Performance Monitoring: Fraud Detection</h1>"
    ]
   },
   {
@@ -25,11 +25,11 @@
    "id": "703f184c-e1a6-4f5e-be14-f959973a1a83",
    "metadata": {},
    "source": [
-    "**Overview**: In this example, we see how to use UpTrain to monitor performance of a cyber-attack classification task. For the same, we will be training a binary classifier on a popular network traffic dataset called the [NSL-KDD dataset](https://www.unb.ca/cic/datasets/nsl.html) for cyber-attack classification using the [XGBoost classifier](https://xgboost.readthedocs.io/en/stable/). \n",
+    "**Overview**: In this example, we see how to use UpTrain to monitor performance of a fraud classification task. For the same, we will be training a binary classifier on a popular network traffic dataset called the [NSL-KDD dataset](https://www.unb.ca/cic/datasets/nsl.html) for cyber-attack classification using the [XGBoost classifier](https://xgboost.readthedocs.io/en/stable/). \n",
     "\n",
     "**Dataset**: The NSL-KDD dataset includes a variety of network attack types, including denial-of-service (DoS) attacks, unauthorized access (U2R) attacks, and probe attacks. The dataset contains a total of around 25,000 instances and 41 different features that describe the behavior of network connections, such as the number of failed login attempts and the size of packets transmitted.\n",
     "\n",
-    "**Why is monitoring needed**: Once our cyber-attack classification model has been trained, it may initially perform well in detecting malicious activity. However, over time, attackers may adapt their tactics and evolve their methods, leading to a mismatch between the type of attacks seen during training and those seen in production. This can result in decreased accuracy in our model's predictions.\n",
+    "**Why is monitoring needed**: Once our fraud detection model has been trained, it may initially perform well in detecting malicious activity. However, over time, attackers may adapt their tactics and evolve their methods, leading to a mismatch between the type of attacks seen during training and those seen in production. This can result in decreased accuracy in our model's predictions.\n",
     "\n",
     "**Solution**: We will be using UpTrain framework which provides an easy-to-configure way to log model predictions and attach ground-truth to monitor model's performance. We are using drift detection methon on top on model performance to raise alerts in case of any dip in model's accuracy, commonly called **Concept Drift.**"
    ]
@@ -58,48 +58,48 @@
       "Requirement already satisfied: streamlit in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (1.18.1)\n",
       "Requirement already satisfied: scipy in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages/scipy-1.10.0-py3.10-macosx-11.1-arm64.egg (from xgboost) (1.10.0)\n",
       "Requirement already satisfied: numpy in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages/numpy-1.23.5-py3.10-macosx-11.1-arm64.egg (from xgboost) (1.23.5)\n",
-      "Requirement already satisfied: protobuf<4,>=3.12 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from streamlit) (3.20.3)\n",
-      "Requirement already satisfied: altair>=3.2.0 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from streamlit) (4.2.2)\n",
-      "Requirement already satisfied: toml in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from streamlit) (0.10.2)\n",
-      "Requirement already satisfied: pympler>=0.9 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from streamlit) (1.0.1)\n",
-      "Requirement already satisfied: validators>=0.2 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from streamlit) (0.20.0)\n",
-      "Requirement already satisfied: cachetools>=4.0 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from streamlit) (5.3.0)\n",
-      "Requirement already satisfied: gitpython!=3.1.19 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from streamlit) (3.1.30)\n",
-      "Requirement already satisfied: packaging>=14.1 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from streamlit) (23.0)\n",
-      "Requirement already satisfied: tornado>=6.0.3 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from streamlit) (6.2)\n",
-      "Requirement already satisfied: pandas>=0.25 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages/pandas-1.5.3-py3.10-macosx-11.1-arm64.egg (from streamlit) (1.5.3)\n",
-      "Requirement already satisfied: pydeck>=0.1.dev5 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from streamlit) (0.8.0)\n",
-      "Requirement already satisfied: requests>=2.4 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from streamlit) (2.28.2)\n",
-      "Requirement already satisfied: python-dateutil in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages/python_dateutil-2.8.2-py3.10.egg (from streamlit) (2.8.2)\n",
-      "Requirement already satisfied: rich>=10.11.0 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from streamlit) (13.3.1)\n",
       "Requirement already satisfied: click>=7.0 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from streamlit) (8.1.3)\n",
-      "Requirement already satisfied: pyarrow>=4.0 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from streamlit) (11.0.0)\n",
       "Requirement already satisfied: pillow>=6.2.0 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from streamlit) (9.4.0)\n",
-      "Requirement already satisfied: blinker>=1.0.0 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from streamlit) (1.5)\n",
-      "Requirement already satisfied: typing-extensions>=3.10.0.0 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages/typing_extensions-4.4.0-py3.10.egg (from streamlit) (4.4.0)\n",
+      "Requirement already satisfied: cachetools>=4.0 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from streamlit) (5.3.0)\n",
+      "Requirement already satisfied: validators>=0.2 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from streamlit) (0.20.0)\n",
       "Requirement already satisfied: semver in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from streamlit) (2.13.0)\n",
-      "Requirement already satisfied: importlib-metadata>=1.4 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from streamlit) (6.0.0)\n",
+      "Requirement already satisfied: toml in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from streamlit) (0.10.2)\n",
+      "Requirement already satisfied: packaging>=14.1 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from streamlit) (23.0)\n",
+      "Requirement already satisfied: typing-extensions>=3.10.0.0 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages/typing_extensions-4.4.0-py3.10.egg (from streamlit) (4.4.0)\n",
+      "Requirement already satisfied: altair>=3.2.0 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from streamlit) (4.2.2)\n",
+      "Requirement already satisfied: python-dateutil in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages/python_dateutil-2.8.2-py3.10.egg (from streamlit) (2.8.2)\n",
+      "Requirement already satisfied: pympler>=0.9 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from streamlit) (1.0.1)\n",
       "Requirement already satisfied: tzlocal>=1.1 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from streamlit) (4.2)\n",
+      "Requirement already satisfied: pyarrow>=4.0 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from streamlit) (11.0.0)\n",
+      "Requirement already satisfied: pydeck>=0.1.dev5 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from streamlit) (0.8.0)\n",
+      "Requirement already satisfied: tornado>=6.0.3 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from streamlit) (6.2)\n",
+      "Requirement already satisfied: gitpython!=3.1.19 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from streamlit) (3.1.30)\n",
+      "Requirement already satisfied: requests>=2.4 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from streamlit) (2.28.2)\n",
+      "Requirement already satisfied: pandas>=0.25 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages/pandas-1.5.3-py3.10-macosx-11.1-arm64.egg (from streamlit) (1.5.3)\n",
+      "Requirement already satisfied: blinker>=1.0.0 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from streamlit) (1.5)\n",
+      "Requirement already satisfied: importlib-metadata>=1.4 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from streamlit) (6.0.0)\n",
+      "Requirement already satisfied: protobuf<4,>=3.12 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from streamlit) (3.20.3)\n",
+      "Requirement already satisfied: rich>=10.11.0 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from streamlit) (13.3.1)\n",
       "Requirement already satisfied: entrypoints in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from altair>=3.2.0->streamlit) (0.4)\n",
+      "Requirement already satisfied: jsonschema>=3.0 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from altair>=3.2.0->streamlit) (4.17.3)\n",
       "Requirement already satisfied: toolz in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from altair>=3.2.0->streamlit) (0.12.0)\n",
       "Requirement already satisfied: jinja2 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from altair>=3.2.0->streamlit) (3.1.2)\n",
-      "Requirement already satisfied: jsonschema>=3.0 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from altair>=3.2.0->streamlit) (4.17.3)\n",
       "Requirement already satisfied: gitdb<5,>=4.0.1 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from gitpython!=3.1.19->streamlit) (4.0.10)\n",
       "Requirement already satisfied: zipp>=0.5 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from importlib-metadata>=1.4->streamlit) (3.13.0)\n",
       "Requirement already satisfied: pytz>=2020.1 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages/pytz-2022.7.1-py3.10.egg (from pandas>=0.25->streamlit) (2022.7.1)\n",
       "Requirement already satisfied: six>=1.5 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages/six-1.16.0-py3.10.egg (from python-dateutil->streamlit) (1.16.0)\n",
-      "Requirement already satisfied: charset-normalizer<4,>=2 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from requests>=2.4->streamlit) (3.0.1)\n",
-      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from requests>=2.4->streamlit) (1.26.14)\n",
       "Requirement already satisfied: certifi>=2017.4.17 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from requests>=2.4->streamlit) (2022.12.7)\n",
       "Requirement already satisfied: idna<4,>=2.5 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from requests>=2.4->streamlit) (3.4)\n",
-      "Requirement already satisfied: markdown-it-py<3.0.0,>=2.1.0 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from rich>=10.11.0->streamlit) (2.1.0)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from requests>=2.4->streamlit) (3.0.1)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from requests>=2.4->streamlit) (1.26.14)\n",
       "Requirement already satisfied: pygments<3.0.0,>=2.14.0 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from rich>=10.11.0->streamlit) (2.14.0)\n",
+      "Requirement already satisfied: markdown-it-py<3.0.0,>=2.1.0 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from rich>=10.11.0->streamlit) (2.1.0)\n",
       "Requirement already satisfied: pytz-deprecation-shim in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from tzlocal>=1.1->streamlit) (0.1.0.post0)\n",
       "Requirement already satisfied: decorator>=3.4.0 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from validators>=0.2->streamlit) (5.1.1)\n",
       "Requirement already satisfied: smmap<6,>=3.0.1 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from gitdb<5,>=4.0.1->gitpython!=3.1.19->streamlit) (5.0.0)\n",
       "Requirement already satisfied: MarkupSafe>=2.0 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from jinja2->altair>=3.2.0->streamlit) (2.1.2)\n",
-      "Requirement already satisfied: attrs>=17.4.0 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from jsonschema>=3.0->altair>=3.2.0->streamlit) (22.2.0)\n",
       "Requirement already satisfied: pyrsistent!=0.17.0,!=0.17.1,!=0.17.2,>=0.14.0 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from jsonschema>=3.0->altair>=3.2.0->streamlit) (0.19.3)\n",
+      "Requirement already satisfied: attrs>=17.4.0 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from jsonschema>=3.0->altair>=3.2.0->streamlit) (22.2.0)\n",
       "Requirement already satisfied: mdurl~=0.1 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from markdown-it-py<3.0.0,>=2.1.0->rich>=10.11.0->streamlit) (0.1.2)\n",
       "Requirement already satisfied: tzdata in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from pytz-deprecation-shim->tzlocal>=1.1->streamlit) (2022.7)\n"
      ]
@@ -622,7 +622,7 @@
    "id": "f8284211-8a38-4a30-80eb-2afb5ad698ec",
    "metadata": {},
    "source": [
-    "In the this example, we used a popular drift detection algorithm called the [Drift Detection Method (DDM)](https://riverml.xyz/0.11.1/api/drift/DDM/) which is already implemented as a part of the UpTrain package. However, as we see the model accuracy is dropping from 99.7% to 96.9% which is still a slow decline but not might raise many eyebrows. "
+    "In the this example, we used a popular drift detection algorithm called the [Drift Detection Method (DDM)](https://riverml.xyz/0.11.1/api/drift/DDM/) which is already implemented as a part of the UpTrain package. However, as we see the model accuracy is dropping from 99.7% to 96.9% which is still a slow decline and might not raise many eyebrows. "
    ]
   },
   {
@@ -673,9 +673,9 @@
       "\t- type:\n",
       "\t\tAnomaly.CUSTOM_MONITOR\n",
       "\t- initialize_func:\n",
-      "\t\t<function custom_initialize_func at 0x2884b0e50>\n",
+      "\t\t<function custom_initialize_func at 0x17882f490>\n",
       "\t- check_func:\n",
-      "\t\t<function custom_check_func at 0x2884b13f0>\n",
+      "\t\t<function custom_check_func at 0x17882e290>\n",
       "\t- need_gt:\n",
       "\t\tTrue\n",
       "- retraining_folder:\n",
@@ -813,9 +813,14 @@
    "id": "09c998ab-9381-4d51-a52d-9853828f7e70",
    "metadata": {},
    "source": [
-    "Model monitoring is very crucial for tasks such as cyber-attack detection and fraud detection where the attackers continuously improve their attack vectors and with time learn to evade detection. Real-time model observability enables one to proactively address any performance degradation before it leads to serious consequences, such as hacks or financial loss.\n",
+    "Model monitoring is very crucial for tasks such as fraud detection, cyber-security attacks etc. where the malicious agents continuously improve their attack vectors and with time, learn to evade detection. Real-time model observability enables one to proactively address any performance degradation before it leads to serious consequences, such as hacks or financial loss.\n",
     "\n",
-    "In this example, we saw two ways to detect performance degradation - Concept Drift via DDM and Custom monitor. The UpTrain framework has many other statistical tools, such as data drift, integrity checks, shift in model outputs, and outlier detection, that can be used to identify model issues, even in cases where ground truth is not available. You can explore them [here](https://github.com/uptrain-ai/uptrain/tree/main/examples)\n"
+    "In this example, we saw two ways to detect performance degradation - Concept Drift via DDM and Custom monitor. The UpTrain framework has many other statistical tools, such as data drift, integrity checks, shift in model outputs, and outlier detection, that can be used to identify model issues, even in cases where ground truth is not available. You can explore them [here](https://github.com/uptrain-ai/uptrain/tree/main/examples)\n",
+    "\n",
+    "- Using Data-Drift (i.e. shifts in input distribution) to identify dips in model performance - Coming soon\n",
+    "- Automatically detecting edge-cases and out-of-distribution samples - Link\n",
+    "- Defining custom signals to identify edge-cases - Link\n",
+    "- Monitoring bias in recommendation systems - Link\n"
    ]
   }
  ],
