Add more comments

--- a/examples/llm_bert/run.ipynb
+++ b/examples/llm_bert/run.ipynb
@@ -41,7 +41,7 @@
    },
    "outputs": [],
    "source": [
-    "!pip install torch transformers[torch] datasets ipywidgets nltk"
+    "!pip install torch transformers[torch] datasets ipywidgets nltk uptrain"
    ]
   },
   {
@@ -92,99 +92,7 @@
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "loading configuration file config.json from cache at /Users/sourabhagrawal/.cache/huggingface/hub/models--distilbert-base-uncased/snapshots/1c4513b2eedbda136f57676a34eea67aba266e5c/config.json\n",
-      "Model config DistilBertConfig {\n",
-      "  \"_name_or_path\": \"distilbert-base-uncased\",\n",
-      "  \"activation\": \"gelu\",\n",
-      "  \"architectures\": [\n",
-      "    \"DistilBertForMaskedLM\"\n",
-      "  ],\n",
-      "  \"attention_dropout\": 0.1,\n",
-      "  \"dim\": 768,\n",
-      "  \"dropout\": 0.1,\n",
-      "  \"hidden_dim\": 3072,\n",
-      "  \"initializer_range\": 0.02,\n",
-      "  \"max_position_embeddings\": 512,\n",
-      "  \"model_type\": \"distilbert\",\n",
-      "  \"n_heads\": 12,\n",
-      "  \"n_layers\": 6,\n",
-      "  \"pad_token_id\": 0,\n",
-      "  \"qa_dropout\": 0.1,\n",
-      "  \"seq_classif_dropout\": 0.2,\n",
-      "  \"sinusoidal_pos_embds\": false,\n",
-      "  \"tie_weights_\": true,\n",
-      "  \"transformers_version\": \"4.26.1\",\n",
-      "  \"vocab_size\": 30522\n",
-      "}\n",
-      "\n",
-      "loading file vocab.txt from cache at /Users/sourabhagrawal/.cache/huggingface/hub/models--distilbert-base-uncased/snapshots/1c4513b2eedbda136f57676a34eea67aba266e5c/vocab.txt\n",
-      "loading file tokenizer.json from cache at /Users/sourabhagrawal/.cache/huggingface/hub/models--distilbert-base-uncased/snapshots/1c4513b2eedbda136f57676a34eea67aba266e5c/tokenizer.json\n",
-      "loading file added_tokens.json from cache at None\n",
-      "loading file special_tokens_map.json from cache at None\n",
-      "loading file tokenizer_config.json from cache at /Users/sourabhagrawal/.cache/huggingface/hub/models--distilbert-base-uncased/snapshots/1c4513b2eedbda136f57676a34eea67aba266e5c/tokenizer_config.json\n",
-      "loading configuration file config.json from cache at /Users/sourabhagrawal/.cache/huggingface/hub/models--distilbert-base-uncased/snapshots/1c4513b2eedbda136f57676a34eea67aba266e5c/config.json\n",
-      "Model config DistilBertConfig {\n",
-      "  \"_name_or_path\": \"distilbert-base-uncased\",\n",
-      "  \"activation\": \"gelu\",\n",
-      "  \"architectures\": [\n",
-      "    \"DistilBertForMaskedLM\"\n",
-      "  ],\n",
-      "  \"attention_dropout\": 0.1,\n",
-      "  \"dim\": 768,\n",
-      "  \"dropout\": 0.1,\n",
-      "  \"hidden_dim\": 3072,\n",
-      "  \"initializer_range\": 0.02,\n",
-      "  \"max_position_embeddings\": 512,\n",
-      "  \"model_type\": \"distilbert\",\n",
-      "  \"n_heads\": 12,\n",
-      "  \"n_layers\": 6,\n",
-      "  \"pad_token_id\": 0,\n",
-      "  \"qa_dropout\": 0.1,\n",
-      "  \"seq_classif_dropout\": 0.2,\n",
-      "  \"sinusoidal_pos_embds\": false,\n",
-      "  \"tie_weights_\": true,\n",
-      "  \"transformers_version\": \"4.26.1\",\n",
-      "  \"vocab_size\": 30522\n",
-      "}\n",
-      "\n",
-      "loading configuration file config.json from cache at /Users/sourabhagrawal/.cache/huggingface/hub/models--distilbert-base-uncased/snapshots/1c4513b2eedbda136f57676a34eea67aba266e5c/config.json\n",
-      "Model config DistilBertConfig {\n",
-      "  \"_name_or_path\": \"distilbert-base-uncased\",\n",
-      "  \"activation\": \"gelu\",\n",
-      "  \"architectures\": [\n",
-      "    \"DistilBertForMaskedLM\"\n",
-      "  ],\n",
-      "  \"attention_dropout\": 0.1,\n",
-      "  \"dim\": 768,\n",
-      "  \"dropout\": 0.1,\n",
-      "  \"hidden_dim\": 3072,\n",
-      "  \"initializer_range\": 0.02,\n",
-      "  \"max_position_embeddings\": 512,\n",
-      "  \"model_type\": \"distilbert\",\n",
-      "  \"n_heads\": 12,\n",
-      "  \"n_layers\": 6,\n",
-      "  \"pad_token_id\": 0,\n",
-      "  \"qa_dropout\": 0.1,\n",
-      "  \"seq_classif_dropout\": 0.2,\n",
-      "  \"sinusoidal_pos_embds\": false,\n",
-      "  \"tie_weights_\": true,\n",
-      "  \"transformers_version\": \"4.26.1\",\n",
-      "  \"vocab_size\": 30522\n",
-      "}\n",
-      "\n",
-      "loading weights file pytorch_model.bin from cache at /Users/sourabhagrawal/.cache/huggingface/hub/models--distilbert-base-uncased/snapshots/1c4513b2eedbda136f57676a34eea67aba266e5c/pytorch_model.bin\n",
-      "All model checkpoint weights were used when initializing DistilBertForMaskedLM.\n",
-      "\n",
-      "All the weights of DistilBertForMaskedLM were initialized from the model checkpoint at distilbert-base-uncased.\n",
-      "If your task is similar to the task the model of the checkpoint was trained on, you can already use DistilBertForMaskedLM for predictions without further training.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "tokenizer = AutoTokenizer.from_pretrained(model_checkpoint)\n",
     "model = AutoModelForMaskedLM.from_pretrained(model_checkpoint)\n",
@@ -289,14 +197,33 @@
     "\n",
     "for sample in all_data['data']:\n",
     "    inputs = {'data': {'text': [sample['text']]}}\n",
-    "    framework.log(inputs = inputs, outputs = None)\n",
-    "\n",
-    "retraining_dataset = create_dataset_from_csv(\"uptrain_smart_data/1/smart_data.csv\", \"text\", \"retrain_dataset.json\", min_samples=1000)"
+    "    framework.log(inputs = inputs, outputs = None)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 16,
+   "id": "ee055a02-66a4-498f-b9e0-563c60d53fcb",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of samples filtered for retraining:  82\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Number of samples filtered for retraining: \", len(pd.read_csv(\"uptrain_smart_data/1/smart_data.csv\")))\n",
+    "retraining_dataset = create_dataset_from_csv(\"uptrain_smart_data/1/smart_data.csv\", \"text\", \"retrain_dataset.json\", min_samples=1000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "id": "ca8d91d9-4540-4850-ad27-69fe9468e7dc",
    "metadata": {},
    "outputs": [
@@ -304,20 +231,24 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Using custom data configuration default-f88da7f313c045c2\n"
+      "Using custom data configuration default-e1ecfc1614a13790\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Downloading and preparing dataset json/default to /Users/sourabhagrawal/.cache/huggingface/datasets/json/default-f88da7f313c045c2/0.0.0/0f7e3662623656454fcd2b650f34e886a7db4b9104504885bd462096cc7a9f51...\n"
+      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
+      "To disable this warning, you can either:\n",
+      "\t- Avoid using `tokenizers` before the fork if possible\n",
+      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n",
+      "Downloading and preparing dataset json/default to /Users/sourabhagrawal/.cache/huggingface/datasets/json/default-e1ecfc1614a13790/0.0.0/0f7e3662623656454fcd2b650f34e886a7db4b9104504885bd462096cc7a9f51...\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "81efae8682054236ac4ab9e7c11184fe",
+       "model_id": "a990edd7080444aa9974538310c78e56",
        "version_major": 2,
        "version_minor": 0
       },
@@ -331,7 +262,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d99a1ff12d9a4d7d8500637a1d8b2aa7",
+       "model_id": "3c0b78d3759d43b8bfcc05dcf33cd2e7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -360,13 +291,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dataset json downloaded and prepared to /Users/sourabhagrawal/.cache/huggingface/datasets/json/default-f88da7f313c045c2/0.0.0/0f7e3662623656454fcd2b650f34e886a7db4b9104504885bd462096cc7a9f51. Subsequent calls will reuse this data.\n"
+      "Dataset json downloaded and prepared to /Users/sourabhagrawal/.cache/huggingface/datasets/json/default-e1ecfc1614a13790/0.0.0/0f7e3662623656454fcd2b650f34e886a7db4b9104504885bd462096cc7a9f51. Subsequent calls will reuse this data.\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3d699f2390f5418c9841a4e61e25935d",
+       "model_id": "267383ed160a4f39a480057169ab3aeb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -380,7 +311,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6803c62d62c14c7d8eae9a64f17e1c66",
+       "model_id": "a9500ba76ef24755a890c75b5914e114",
        "version_major": 2,
        "version_minor": 0
       },
@@ -394,7 +325,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5a2ec07c8f0f47a1a6fe58a29ae80407",
+       "model_id": "18d5e6f77afa4116bd426727f22e4ce8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -409,12 +340,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "PyTorch: setting up devices\n",
-      "The default value for the training argument `--report_to` will change in v5 (from all installed integrations to none). In v5, you will need to use `--report_to all` to get the same behavior as now. You should start updating your code and make this info disappear :-).\n",
       "The following columns in the evaluation set don't have a corresponding argument in `DistilBertForMaskedLM.forward` and have been ignored: word_ids. If word_ids are not expected by `DistilBertForMaskedLM.forward`,  you can safely ignore this message.\n",
       "***** Running Evaluation *****\n",
       "  Num examples = 23\n",
-      "  Batch size = 64\n"
+      "  Batch size = 64\n",
+      "You're using a DistilBertTokenizerFast tokenizer. Please note that with a fast tokenizer, using the `__call__` method is faster than using a method to encode the text followed by a call to the `pad` method to get a padded encoding.\n"
      ]
     },
     {
@@ -424,7 +354,7 @@
        "    <div>\n",
        "      \n",
        "      <progress value='2' max='1' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [1/1 00:52]\n",
+       "      [1/1 00:54]\n",
        "    </div>\n",
        "    "
       ],
@@ -466,7 +396,7 @@
        "    <div>\n",
        "      \n",
        "      <progress value='12' max='12' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [12/12 01:55, Epoch 3/3]\n",
+       "      [12/12 02:05, Epoch 3/3]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -562,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "f014895c-0e6d-4886-a9b4-7071154e6315",
    "metadata": {
     "tags": []
@@ -575,7 +505,7 @@
        " [['popular', 'expensive', 'durable', 'comfortable', 'common']]]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
