--- a/examples/llm_bert/run.ipynb
+++ b/examples/llm_bert/run.ipynb
@@ -17,7 +17,7 @@
    "id": "c074abda-7ad0-4af1-a7b4-f5177213dae8",
    "metadata": {},
    "source": [
-    "<h1 style=\"text-align: center;\">Fine-tuning a Large-Language Model</h1>"
+    "<h1 style=\"text-align: center;\">Fine-tuning a Large-Language Model [WIP]</h1>"
    ]
   },
   {
@@ -41,12 +41,12 @@
    },
    "outputs": [],
    "source": [
-    "!pip install torch transformers[torch] datasets ipywidgets"
+    "!pip install torch transformers[torch] datasets ipywidgets nltk uptrain"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "f61005f8-27ae-4a7a-a190-fe5f335821cb",
    "metadata": {
     "tags": []
@@ -54,16 +54,40 @@
    "outputs": [],
    "source": [
     "from transformers import AutoModelForMaskedLM, AutoTokenizer\n",
+    "import json\n",
+    "from nltk.sentiment.vader import SentimentIntensityAnalyzer\n",
+    "import uptrain\n",
+    "\n",
     "from model_constants import *\n",
     "from model_train import retrain_model\n",
-    "from helper_funcs import *\n",
-    "import json\n",
-    "import uptrain"
+    "from helper_funcs import *"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e3753482-afaf-4210-8a3e-d4fb8a325ce2",
+   "metadata": {},
+   "source": [
+    "Define few cases to test our model performance before and after retraining."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
+   "id": "e3c59113-37e7-4245-8dc5-3e3d03bcdad6",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "testing_texts = [\n",
+    "    \"Nike shoes are very [MASK].\"\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "8d6e1263-e704-4de2-af99-507ea68125fd",
    "metadata": {
     "tags": []
@@ -72,13 +96,40 @@
    "source": [
     "tokenizer = AutoTokenizer.from_pretrained(model_checkpoint)\n",
     "model = AutoModelForMaskedLM.from_pretrained(model_checkpoint)\n",
-    "testing_text = \"Nike shoes are very [MASK].\"\n",
-    "original_model_outputs = test_model(model, testing_text)"
+    "original_model_outputs = [test_model(model, x) for x in testing_texts]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dcf52e6a-0f3c-447d-903d-101b7392c44a",
+   "metadata": {},
+   "source": [
+    "Let's use Nike onlinestore customer reviews from Kaggle and filter data using UpTrain signals to retrain our model upon. Please download the data from the [link](https://www.kaggle.com/datasets/tinkuzp23/nike-onlinestore-customer-reviews?resource=download) and unzip it here.\n",
+    "  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
+   "id": "f55f6fdc-1649-4be5-a0da-aab07be20fd0",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Create Nike review training dataset\n",
+    "nike_attrs = {\n",
+    "    \"version\": \"0.1.0\",\n",
+    "    'source': \"nike review dataset\",\n",
+    "    'url': 'https://www.kaggle.com/datasets/tinkuzp23/nike-onlinestore-customer-reviews?resource=download',\n",
+    "}\n",
+    "# Download the dataset from the url, zip it and copy the csv file here\n",
+    "nike_reviews_dataset = create_dataset_from_csv(\"web_scraped.csv\", \"Content\", \"nike_reviews_data.json\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "d9edc5da-8366-4c55-93a7-4601c89c9970",
    "metadata": {
     "tags": []
@@ -88,32 +139,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Deleting the folder:  uptrain_smart_data_bert\n"
+      "Deleting the folder:  uptrain_smart_data\n"
      ]
     }
    ],
    "source": [
-    "def nike_text_present_func(inputs, outputs, gts=None, extra_args={}):\n",
-    "    is_present = []\n",
+    "def nike_positive_sentiment_func(inputs, outputs, gts=None, extra_args={}):\n",
+    "    is_positives = []\n",
     "    for input in inputs[\"text\"]:\n",
-    "        this_present = \"nike\" in input.lower()\n",
-    "        is_present.append(bool(this_present))\n",
-    "    return is_present\n",
+    "        txt = input.lower()\n",
+    "        sia = SentimentIntensityAnalyzer()\n",
+    "        score = sia.polarity_scores(txt)\n",
     "\n",
-    "uptrain_save_fold_name = \"uptrain_smart_data_bert\"\n",
-    "nike_text_present = uptrain.Signal(\"Nike Text Present\", nike_text_present_func)\n",
+    "        is_negative = score['pos'] < 0.25\n",
+    "        for neg_adj in ['expensive', 'worn', 'cheap', 'inexpensive', 'dirty', 'bad']:\n",
+    "            if neg_adj in txt:\n",
+    "                is_negative = True\n",
+    "\n",
+    "        is_positives.append(bool(1-is_negative))\n",
+    "    return is_positives\n",
     "\n",
     "cfg = {\n",
     "    'checks': [{\n",
     "        'type': uptrain.Anomaly.EDGE_CASE,\n",
-    "        \"signal_formulae\": nike_text_present\n",
+    "        \"signal_formulae\": uptrain.Signal(\"Nike Positive Sentiment\", nike_positive_sentiment_func)\n",
     "    }],\n",
     "\n",
     "    # Define where to save the retraining dataset\n",
-    "    'retraining_folder': uptrain_save_fold_name,\n",
+    "    'retraining_folder': \"uptrain_smart_data\",\n",
     "    \n",
-    "    # Define when to retrain, define a large number because we\n",
-    "    # are not retraining yet\n",
+    "    # Define when to retrain, define a large number because we are using UpTrain just to create retraining dataset\n",
     "    'retrain_after': 10000000000\n",
     "}\n",
     "\n",
@@ -122,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "id": "abe66970-c0ce-421d-9f7a-845453615903",
    "metadata": {
     "tags": []
@@ -132,44 +187,43 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "50  edge cases identified out of  197  total samples\n",
-      "100  edge cases identified out of  397  total samples\n",
-      "150  edge cases identified out of  597  total samples\n",
-      "200  edge cases identified out of  797  total samples\n",
-      "250  edge cases identified out of  997  total samples\n",
-      "300  edge cases identified out of  1197  total samples\n",
-      "350  edge cases identified out of  1397  total samples\n",
-      "400  edge cases identified out of  1597  total samples\n",
-      "450  edge cases identified out of  1797  total samples\n",
-      "500  edge cases identified out of  1997  total samples\n",
-      "550  edge cases identified out of  2197  total samples\n",
-      "600  edge cases identified out of  2397  total samples\n",
-      "650  edge cases identified out of  2597  total samples\n",
-      "700  edge cases identified out of  2797  total samples\n",
-      "750  edge cases identified out of  2997  total samples\n",
-      "800  edge cases identified out of  3197  total samples\n",
-      "850  edge cases identified out of  3397  total samples\n",
-      "900  edge cases identified out of  3597  total samples\n",
-      "950  edge cases identified out of  3797  total samples\n",
-      "1000  edge cases identified out of  3997  total samples\n"
+      "50  edge cases identified out of  135  total samples\n"
      ]
     }
    ],
    "source": [
-    "raw_dataset = create_sample_dataset(\"data.json\")\n",
-    "with open(raw_dataset) as f:\n",
+    "with open(nike_reviews_dataset) as f:\n",
     "    all_data = json.load(f)\n",
     "\n",
     "for sample in all_data['data']:\n",
     "    inputs = {'data': {'text': [sample['text']]}}\n",
-    "    framework.log(inputs = inputs, outputs = None)\n",
-    "\n",
-    "retraining_dataset = create_dataset_from_csv(uptrain_save_fold_name + \"/1/smart_data.csv\", \"text\", \"retrain_dataset.json\")"
+    "    framework.log(inputs = inputs, outputs = None)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
+   "id": "ee055a02-66a4-498f-b9e0-563c60d53fcb",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of samples filtered for retraining:  82\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Number of samples filtered for retraining: \", len(pd.read_csv(\"uptrain_smart_data/1/smart_data.csv\")))\n",
+    "retraining_dataset = create_dataset_from_csv(\"uptrain_smart_data/1/smart_data.csv\", \"text\", \"retrain_dataset.json\", min_samples=1000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "id": "ca8d91d9-4540-4850-ad27-69fe9468e7dc",
    "metadata": {},
    "outputs": [
@@ -177,7 +231,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Using custom data configuration default-2370e3cf0f5387dd\n"
+      "Using custom data configuration default-e1ecfc1614a13790\n"
      ]
     },
     {
@@ -188,13 +242,13 @@
       "To disable this warning, you can either:\n",
       "\t- Avoid using `tokenizers` before the fork if possible\n",
       "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n",
-      "Downloading and preparing dataset json/default to /Users/vipul/.cache/huggingface/datasets/json/default-2370e3cf0f5387dd/0.0.0/0f7e3662623656454fcd2b650f34e886a7db4b9104504885bd462096cc7a9f51...\n"
+      "Downloading and preparing dataset json/default to /Users/sourabhagrawal/.cache/huggingface/datasets/json/default-e1ecfc1614a13790/0.0.0/0f7e3662623656454fcd2b650f34e886a7db4b9104504885bd462096cc7a9f51...\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f3febc7766304c9b84a1f06ae414fd70",
+       "model_id": "a990edd7080444aa9974538310c78e56",
        "version_major": 2,
        "version_minor": 0
       },
@@ -208,7 +262,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c66dff810d5647bfa1848aafa2ae36c5",
+       "model_id": "3c0b78d3759d43b8bfcc05dcf33cd2e7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -222,7 +276,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c46565a9a9244205b9a01af3de48b50b",
+       "model_id": "",
        "version_major": 2,
        "version_minor": 0
       },
@@ -237,13 +291,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dataset json downloaded and prepared to /Users/vipul/.cache/huggingface/datasets/json/default-2370e3cf0f5387dd/0.0.0/0f7e3662623656454fcd2b650f34e886a7db4b9104504885bd462096cc7a9f51. Subsequent calls will reuse this data.\n"
+      "Dataset json downloaded and prepared to /Users/sourabhagrawal/.cache/huggingface/datasets/json/default-e1ecfc1614a13790/0.0.0/0f7e3662623656454fcd2b650f34e886a7db4b9104504885bd462096cc7a9f51. Subsequent calls will reuse this data.\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ea9d507379f947adb8b5553b0e29592c",
+       "model_id": "267383ed160a4f39a480057169ab3aeb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -257,12 +311,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d33d8af89d6b48fba1382d275d7b6975",
+       "model_id": "a9500ba76ef24755a890c75b5914e114",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/1 [00:00<?, ?ba/s]"
+       "  0%|          | 0/2 [00:00<?, ?ba/s]"
       ]
      },
      "metadata": {},
@@ -271,12 +325,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d05defffbcbc4cd0b17d3f0212e7836d",
+       "model_id": "18d5e6f77afa4116bd426727f22e4ce8",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/1 [00:00<?, ?ba/s]"
+       "  0%|          | 0/2 [00:00<?, ?ba/s]"
       ]
      },
      "metadata": {},
@@ -288,7 +342,7 @@
      "text": [
       "The following columns in the evaluation set don't have a corresponding argument in `DistilBertForMaskedLM.forward` and have been ignored: word_ids. If word_ids are not expected by `DistilBertForMaskedLM.forward`,  you can safely ignore this message.\n",
       "***** Running Evaluation *****\n",
-      "  Num examples = 11\n",
+      "  Num examples = 23\n",
       "  Batch size = 64\n",
       "You're using a DistilBertTokenizerFast tokenizer. Please note that with a fast tokenizer, using the `__call__` method is faster than using a method to encode the text followed by a call to the `pad` method to get a padded encoding.\n"
      ]
@@ -300,7 +354,7 @@
        "    <div>\n",
        "      \n",
        "      <progress value='2' max='1' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [1/1 02:11]\n",
+       "      [1/1 00:54]\n",
        "    </div>\n",
        "    "
       ],
@@ -316,15 +370,15 @@
      "output_type": "stream",
      "text": [
       "The following columns in the training set don't have a corresponding argument in `DistilBertForMaskedLM.forward` and have been ignored: word_ids. If word_ids are not expected by `DistilBertForMaskedLM.forward`,  you can safely ignore this message.\n",
-      "/Users/vipul/opt/anaconda3/envs/uptrain_test/lib/python3.8/site-packages/transformers/optimization.py:306: FutureWarning: This implementation of AdamW is deprecated and will be removed in a future version. Use the PyTorch implementation torch.optim.AdamW instead, or set `no_deprecation_warning=True` to disable this warning\n",
+      "/Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages/transformers/optimization.py:306: FutureWarning: This implementation of AdamW is deprecated and will be removed in a future version. Use the PyTorch implementation torch.optim.AdamW instead, or set `no_deprecation_warning=True` to disable this warning\n",
       "  warnings.warn(\n",
       "***** Running training *****\n",
-      "  Num examples = 92\n",
+      "  Num examples = 204\n",
       "  Num Epochs = 3\n",
       "  Instantaneous batch size per device = 64\n",
       "  Total train batch size (w. parallel, distributed & accumulation) = 64\n",
       "  Gradient Accumulation steps = 1\n",
-      "  Total optimization steps = 6\n",
+      "  Total optimization steps = 12\n",
       "  Number of trainable parameters = 66985530\n"
      ]
     },
@@ -332,7 +386,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ">>>Before training, Perplexity: 10.48\n"
+      ">>>Before training, Perplexity: 66.00\n"
      ]
     },
     {
@@ -341,8 +395,8 @@
        "\n",
        "    <div>\n",
        "      \n",
-       "      <progress value='6' max='6' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [6/6 07:16, Epoch 3/3]\n",
+       "      <progress value='12' max='12' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [12/12 02:05, Epoch 3/3]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -355,18 +409,18 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>1.631900</td>\n",
-       "      <td>0.936632</td>\n",
+       "      <td>No log</td>\n",
+       "      <td>3.843420</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
-       "      <td>1.283500</td>\n",
-       "      <td>1.153624</td>\n",
+       "      <td>No log</td>\n",
+       "      <td>3.376830</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
-       "      <td>1.151900</td>\n",
-       "      <td>0.998965</td>\n",
+       "      <td>No log</td>\n",
+       "      <td>3.453454</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table><p>"
@@ -384,15 +438,15 @@
      "text": [
       "The following columns in the evaluation set don't have a corresponding argument in `DistilBertForMaskedLM.forward` and have been ignored: word_ids. If word_ids are not expected by `DistilBertForMaskedLM.forward`,  you can safely ignore this message.\n",
       "***** Running Evaluation *****\n",
-      "  Num examples = 11\n",
+      "  Num examples = 23\n",
       "  Batch size = 64\n",
       "The following columns in the evaluation set don't have a corresponding argument in `DistilBertForMaskedLM.forward` and have been ignored: word_ids. If word_ids are not expected by `DistilBertForMaskedLM.forward`,  you can safely ignore this message.\n",
       "***** Running Evaluation *****\n",
-      "  Num examples = 11\n",
+      "  Num examples = 23\n",
       "  Batch size = 64\n",
       "The following columns in the evaluation set don't have a corresponding argument in `DistilBertForMaskedLM.forward` and have been ignored: word_ids. If word_ids are not expected by `DistilBertForMaskedLM.forward`,  you can safely ignore this message.\n",
       "***** Running Evaluation *****\n",
-      "  Num examples = 11\n",
+      "  Num examples = 23\n",
       "  Batch size = 64\n",
       "\n",
       "\n",
@@ -401,7 +455,7 @@
       "\n",
       "The following columns in the evaluation set don't have a corresponding argument in `DistilBertForMaskedLM.forward` and have been ignored: word_ids. If word_ids are not expected by `DistilBertForMaskedLM.forward`,  you can safely ignore this message.\n",
       "***** Running Evaluation *****\n",
-      "  Num examples = 11\n",
+      "  Num examples = 23\n",
       "  Batch size = 64\n"
      ]
     },
@@ -427,34 +481,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ">>>After trainign, Perplexity: 2.63\n"
+      ">>>After training, Perplexity: 27.02\n"
      ]
     }
    ],
    "source": [
     "retrain_model(model, retraining_dataset)\n",
-    "retrained_model_outputs = test_model(model, testing_text)"
+    "retrained_model_outputs = [test_model(model, x) for x in testing_texts]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "id": "f014895c-0e6d-4886-a9b4-7071154e6315",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[['popular', 'expensive', 'durable', 'common', 'comfortable']],\n",
+       " [['popular', 'expensive', 'durable', 'comfortable', 'common']]]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# print([original_model_outputs, retrained_model_outputs])\n",
-    "\n",
-    "# # Create Nike review training dataset\n",
-    "# nike_attrs = {\n",
-    "#     \"version\": \"0.1.0\",\n",
-    "#     'source': \"nike review dataset\",\n",
-    "#     'url': 'https://www.kaggle.com/datasets/tinkuzp23/nike-onlinestore-customer-reviews?resource=download',\n",
-    "# }\n",
-    "# # Download the dataset from the url, zip it and copy the csv file here\n",
-    "# raw_nike_reviews_dataset = create_dataset_from_csv(\"web_scrapped.csv\", \"Content\", \"raw_nike_reviews_data.json\")"
+    "[original_model_outputs, retrained_model_outputs]"
    ]
   }
  ],
@@ -474,7 +531,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
